@@ -148,11 +148,12 @@ class Channel(chn_class.Channel):
                 "icon": TextureHandler.Instance().GetTextureUri(self, "ketnetlarge.png"),
                 "url": "https://live-vrt.akamaized.net/groupc/live/f132f1b8-d04d-404e-90e0-6da1abb4f4fc/live_aes.isml/.m3u8"
             },
-            "vualto_sporza--": {  # not in the channel filter maps, so no metaCode
+            "vualto_sporza": {  # not in the channel filter maps, so no metaCode
                 "title": "Sporza",
                 "fanart": TextureHandler.Instance().GetTextureUri(self, "sporzafanart.jpg"),
                 "thumb": TextureHandler.Instance().GetTextureUri(self, "sporzaimage.png"),
-                "icon": TextureHandler.Instance().GetTextureUri(self, "sporzalarge.png")
+                "icon": TextureHandler.Instance().GetTextureUri(self, "sporzalarge.png"),
+                "url": "https://live-vrt.akamaized.net/groupa/live/7d5f0e4a-3429-4861-91d4-aa3229d7ad7b/live_aes.isml/.m3u8"
             },
             "ketnet-jr": {  # Not in the live channels
                 "title": "KetNet Junior",
